# agentregistry-dev-samples

TEMPLATES/agentdemo/: agent.yaml
TEMPLATES/agentdemo/agentdemo/: agent.py  bedrock_model.py
TEMPLATES/everything-server/: arctl.yaml  mcp.yaml
xytian315-agentdemo/: agent.yaml  arctl.yaml  pyproject.toml
xytian315-agentdemo/agentdemo/: agent.py  bedrock_model.py
